# serde-ply

./: .rules  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: basic.rs  chunked.rs  core_performance.rs  gaussian_splat.rs  ply_parsing.rs  splat.rs
examples/: basic.rs  basic_usage.rs  binary_format.rs  binary_writing.rs  chunked.rs  chunked_loading.rs  chunked_parsing.rs  create_ply.rs  high_performance.rs  multi_element.rs  serde_features.rs  struct_example.rs  unified_api.rs
src/: chunked.rs  de.rs  error.rs  lib.rs  main.rs  ply_file.rs  ser.rs
src/de/: ascii.rs  binary.rs  chunked.rs  mod.rs  ply_file.rs  row.rs  val_reader.rs
src/ser/: header_collector.rs  mod.rs  ply_file.rs  row.rs  val_writer.rs
tests/: chunked.rs  chunked_loading.rs  deserialize.rs  integration.rs  parsing.rs  serde_features.rs  serialization.rs  serialize.rs
