[package]
name = "serde-ply"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Serde-based PLY (Polygon File Format) serializer and deserializer"
license = "MIT"
repository = "https://github.com/ArthurBrussee/serde_ply"
documentation = "https://docs.rs/serde_ply"
keywords = ["ply", "polygon", "3d", "mesh", "serde"]
categories = ["encoding", "graphics"]
readme = "README.md"

[lib]
name = "serde_ply"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
byteorder = "1.4"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "basic"
harness = false

[[bench]]
name = "chunked"
harness = false

[[bench]]
name = "splat"
harness = false

[lints.rust]
unsafe_code = "forbid"

[profile.profiling]
inherits = "release"
debug = true
